# LocalSearch1

./: .gitignore  CMakeLists.txt  README.md  bestSolution.json  execute.py  main.cc
results/MetaheuristicFase1Results/: solution_test01.json  solution_test04.json  solution_test05.json  solution_test06.json  solution_test07.json  solution_test08.json  solution_test09.json  solution_test10.json
results/MetaheuristicFase2Results(Elitismo)/: solution_test01.json  solution_test02.json  solution_test03.json  solution_test04.json  solution_test05.json  solution_test06.json  solution_test07.json  solution_test08.json  solution_test09.json  solution_test10.json
results/MetaheuristicFase2Results(ReplaceWorst)/: solution_test01.json  solution_test02.json  solution_test03.json  solution_test04.json  solution_test05.json  solution_test06.json  solution_test07.json  solution_test08.json  solution_test09.json
results/RandomSearchResults/: sol_test01.json  sol_test02.json  sol_test03.json  sol_test04.json  sol_test05.json  sol_test06.json  sol_test07.json  sol_test08.json  sol_test09.json  sol_test10.json
results/RandomSearchResults/Otro/: main.cc
results/RandomSearchResults/ResultadosBusquedaAleatoria/InstanciaTest01/10/: solution.json
results/RandomSearchResults/ResultadosBusquedaAleatoria/InstanciaTest01/100/: solution.json
results/RandomSearchResults/ResultadosBusquedaAleatoria/InstanciaTest01/1000/: solution.json
src/: MetaHeuristicSolver.cc  MetaHeuristicSolver.h  ProblemInstance.h  Solver.cc  Solver.h
validator/: IHTP_Validator
(+17 files in other folders)
